tests/module_use_strict/module_use_strict.exp
Error ------------------------------------------------------------------------------------------------------ test.js:1:2

Octal literals are not allowed in strict mode.

   1| (01: number);
       ^^



Found 1 error
